feat: add changeDialogTitle endpoint
